--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
+    "react-simple-captcha": "^9.3.1",
+    "recharts": "^2.13.3",
     "sass": "^1.81.0"
   },
   "devDependencies": {
