--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "axios": "^1.7.7",
     "formik": "^2.4.6",
     "material-icons": "^1.13.12",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.0",
     "react-simple-captcha": "^9.3.1",
     "recharts": "^2.13.3",
-    "sass": "^1.81.0"
+    "sass": "^1.81.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
