--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
     "formik": "^2.4.6",
     "material-icons": "^1.13.12",
     "process": "^0.11.10",
@@ -20,8 +20,10 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.0",
     "react-simple-captcha": "^9.3.1",
+    "react-toastify": "^11.0.2",
     "recharts": "^2.13.3",
     "sass": "^1.81.0",
+    "uuidv4": "^6.2.13",
     "yup": "^1.6.1"
   },
   "devDependencies": {
