--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "material-icons": "^1.13.12",
     "process": "^0.11.10",
     "react": "^18.3.1",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.0",
     "react-simple-captcha": "^9.3.1",
     "react-toastify": "^11.0.2",
-    "recharts": "^2.13.3",
+    "recharts": "^2.15.0",
     "sass": "^1.81.0",
     "uuidv4": "^6.2.13",
     "yup": "^1.6.1"
