--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
+    "jspdf": "^2.5.2",
     "material-icons": "^1.13.12",
     "process": "^0.11.10",
     "react": "^18.3.1",
