--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "recharts": "^2.15.0",
     "sass": "^1.81.0",
     "uuidv4": "^6.2.13",
+    "vite-plugin-pwa": "^0.21.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
