--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "material-icons": "^1.13.12",
+    "nanoid": "^5.0.9",
+    "nodemailer": "^6.10.0",
     "process": "^0.11.10",
     "react": "^18.3.1",
     "react-data-table-component": "^7.6.2",
